data/derived/sp14/progs/unify/prog4444.ml.out
Characters 39-61:
  if n > 0 then digitsOfInt (n mod 10) :: n/10
                ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
